<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/darkColorPrimaryDark"
      >

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0.5"-->
    <!--android:orientation="horizontal">-->


    <!--<TextView-->
    <!--android:id="@+id/tvmessage"-->
    <!--style="@style/dashboard_style"-->
    <!--android:text="Message" />-->

    <!--<TextView-->
    <!--android:id="@+id/tvcall"-->
    <!--style="@style/dashboard_style"-->
    <!--android:text="Call" />-->


    <!--</LinearLayout>-->

    <!--<LinearLayout-->

    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0.5"-->
    <!--android:orientation="horizontal">-->


    <!--<TextView-->
    <!--android:id="@+id/tvbattery"-->
    <!--style="@style/dashboard_style"-->
    <!--android:text="Battery" />-->

    <!--<TextView-->
    <!--android:id="@+id/tvdairy"-->
    <!--style="@style/dashboard_style"-->
    <!--android:text="Diary" />-->


    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvmessage"
                style="@style/StyleTvDashboard"
                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/mess"
                />




            <TextView
                android:id="@+id/tvdairy"
                style="@style/StyleTvDashboard"
                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/diar" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ocr"
                style="@style/StyleTvDashboard"
                android:layout_width="220dp"
                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/ocr" />


            <Button
                android:id="@+id/btn_currency"
                style="@style/StyleTvDashboard"
                android:layout_width="220dp"

                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/cur" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_email"
                style="@style/StyleTvDashboard"
                android:layout_width="220dp"
                android:layout_height="212dp"
                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/email" />

            <Button
                android:id="@+id/str_settings"
                style="@style/StyleTvDashboard"
                android:layout_width="220dp"
                android:layout_height="212dp"
                android:textColor="#FF227397"
                android:textSize="@dimen/_22sdp"
                android:text="@string/settings" />

        </LinearLayout>
    </LinearLayout>
   </LinearLayout>
</LinearLayout>